<resources>
    <string name="app_name">Calculator</string>
    <string name="result">result</string>
    <string name="Value1">Value1</string>
    <string name="Value2">Value2</string>
    <string name="CALCULATE">CALCULATE</string>

    <string-array name="calculation">
        <item>Add</item>
        <item>Substract</item>
        <item>Multiply</item>
        <item>Divide</item>

    </string-array>
</resources>
